Resolved <a></a> color contrast issue.

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -62,6 +62,7 @@ header, main, footer {
     background-color: lightgray;
     text-decoration: none;
     border-radius: 3px;
+    color: var(--accent1-color);
 }
 
 .c-info {
